@@ -1,3 +1,8 @@
+2003-06-25  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* lib/Foomatic/DB.pm: Remove "," and "+" from the "*NickName" and
+	  "*ShortNickName" to make the PostScript drivers of Windows happy.
+
 2003-05-09  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* README: Lots of small corrections.
